<resources>
    <string name="app_name">Magic Food</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_ncontinue_with">Or\nContinue With</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password*</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email*</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>