<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Login_Activity">



    <RelativeLayout
        android:id="@+id/login_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/toolbar"
            android:background="@drawable/shape_rec"

            >

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aclonica"
                />


        </RelativeLayout>
        <ImageButton
            android:id="@+id/img_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circule_shape"
            android:src="@drawable/baseline_vpn_key_24"
            android:padding="5dp"
            android:layout_marginTop="85dp"
            android:layout_centerHorizontal="true"

            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@+id/img_key"
            android:id="@+id/login_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/app_logo"
            app:civ_border_width="1dp"
            app:civ_border_color="#43A047"
            android:layout_marginBottom="-20dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/login_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:cardElevation="6dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"


            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_title"
                    android:text="@string/login_to_your_account"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:fontFamily="@font/koho_medium_italic"
                    android:textColor="#43A047"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_email_tv"
                    android:layout_below="@+id/login_title"
                    android:text="@string/email"
                    android:layout_marginTop="30dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:id="@+id/login_email_ed"
                    android:layout_below="@+id/login_email_tv"
                    android:padding="8dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:background="@drawable/border"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:drawableStart="@drawable/baseline_email_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password_tv"
                    android:layout_below="@+id/login_email_ed"
                    android:text="@string/password"
                    android:layout_marginTop="15dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:id="@+id/login_password_ed"
                    android:layout_below="@+id/login_password_tv"
                    android:padding="8dp"
                    android:inputType="numberPassword"
                    android:hint="@string/enter_password"
                    android:background="@drawable/border"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:drawableStart="@drawable/baseline_lock_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPass_TV"
                    android:layout_below="@+id/login_password_ed"
                    android:text="Forgot Password?"
                    android:textColor="#B71C1C"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_choose_TV"
                    android:layout_below="@+id/login_password_ed"
                    android:text="@string/or_ncontinue_with"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="17sp"
                    android:fontFamily="@font/koho"
                    android:textStyle="bold"
                    android:layout_marginTop="40dp"
                    />

                <LinearLayout
                    android:id="@+id/login_ll"
                    android:layout_below="@+id/login_choose_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:weightSum="2"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_google_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:elevation="5dp"
                        android:layout_weight="1"
                        android:text="@string/google"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/google_icon2"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_fb_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:elevation="5dp"
                        android:text="@string/facebook"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/facebook_31"
                        />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="167dp"
                    android:layout_height="45dp"
                    android:id="@+id/login_btn"
                    android:layout_below="@+id/login_ll"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:elevation="5dp"
                    android:textAllCaps="false"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/koho_medium_italic"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:background="@drawable/btn_bg"
                    />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/login_progress_bar"
                    style="?android:attr/progressBarStyleLarge"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_reg"
                    android:layout_below="@+id/login_btn"
                    android:text="@string/don_t_have_account"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#388E3C"
                    android:gravity="center_horizontal" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>